--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,15 @@
  }
 
  .top {
-    width: 800.58px;
-    height: 764px;
-    flex-shrink: 0;
+     width: 800.58px;
+     height: 764px;
+     flex-shrink: 0;
  }
 
  .right {
      display: flex;
      align-items: center;
-  
+
  }
 
  .palka {
@@ -49,74 +49,54 @@
  }
 
  .man_text {
-    margin-top: 345px;
-    margin-left: 500;
+     margin-top: 345px;
+     margin-left: 500;
  }
-
- 
-
 
 
  .greed {
-     gap: 30px;
      margin-top: 80px;
      display: grid;
-     justify-content: space-around;
- }
-
- .text {}
-
- .text h1 {
-     color: #222;
-     font-family: Lato;
-     font-size: 30px;
-     font-style: normal;
-     font-weight: 400;
-     line-height: normal;
- }
-
- .par {
-     color: #9F9F9F;
-     font-family: Lato;
-     font-size: 14px;
-     font-style: normal;
-     font-weight: 400;
-     line-height: normal;
- }
-
- .item {
-     fill: rgba(33, 22, 22, 0.70);
+     grid-template-columns: repeat(3, 1fr);
+     gap: 30px;
+     margin-left: calc(50% - 570px);
+     margin-right: calc(50% - 570px);
  }
 
  .items {
-     fill: rgba(33, 22, 22, 0.70);
-     display: flex;
-     gap: 28px;
-     justify-content: space-around;
+     position: relative;
  }
 
-
+ .tekst {
+     left: 105px;
+     position: absolute;
+     top: 30%;
+     text-align: center;
+     font-family: Lato;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+ }
 
  .itemslongs {
-     margin-top: 30px;
-     display: flex;
-     justify-content: center;
+     position: relative;
+     margin-top: 25px;
+     margin-left: 345px;
  }
 
- .longitem {
-     width: 1140px;
-     height: 180px;
-     flex-shrink: 0;
+ .tekst2 {
+     left: 450px;
+     position: absolute;
+     top: 20%;
+     text-align: center;
+     font-family: Lato;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
  }
 
  .blockthree {
-     display: inline;
- }
-
- .img {
-     display: flex;
- }
-
- .two {
-     display: flex;
+    display: grid;
  }
