--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,21 @@
      text-decoration: none;
  }
 
+ body {
+     font-family: Lato;
+ }
+
  .header {
      background: #222;
  }
 
+
+ .center {
+     padding-left: calc(50% - 900px);
+     padding-right: calc(50% - 900px);
+ }
+
  .content {
-     margin-left: calc(50% - 570px);
-     margin-right: calc(50% - 570px);
      display: flex;
      justify-content: space-between;
      min-height: 75px;
@@ -18,7 +26,7 @@
  .menu {
      display: flex;
      gap: 40px;
-     align-items: center;
+     justify-content: space-around;
  }
 
  .block {
@@ -65,6 +73,8 @@
 
  .items {
      position: relative;
+     width: 360px;
+     height: 260px;
  }
 
  .tekst {
@@ -97,6 +107,186 @@
      line-height: normal;
  }
 
+ .zxc {
+     color: #FFF;
+     text-align: center;
+     font-family: Lato;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+ }
+
+ .tekst2 h1 {
+     color: #F16D7F;
+     font-family: Lato;
+     font-size: 24px;
+     font-style: normal;
+     font-weight: 700;
+     line-height: normal;
+ }
+
+ .tekst h1 {
+     color: #F16D7F;
+     font-family: Lato;
+     font-size: 24px;
+     font-style: normal;
+     font-weight: 700;
+     line-height: normal;
+ }
+
+
+ .zaq {
+     display: flex;
+     justify-content: center;
+ }
+
+ .paq {
+     color: #9F9F9F;
+     font-family: Lato;
+     font-size: 14px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+     margin-top: 20px;
+     display: flex;
+     justify-content: center;
+ }
+
+
  .blockthree {
-    display: grid;
+     display: grid;
+
+ }
+
+ .phoyo {
+     display: grid;
+ }
+
+ .qaz {
+     display: flex;
+
+     color: #222;
+     font-family: Lato;
+     font-size: 30px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+ }
+
+ .pat {
+     display: flex;
+     justify-content: center;
+     color: #9F9F9F;
+     font-family: Lato;
+     font-size: 14px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+ }
+
+
+ .blockthree {
+     margin-top: 130px;
+     display: flex;
+     justify-content: center;
+     gap: 50px;
+ }
+
+ .blockfoo {
+     margin-top: 55px;
+     display: flex;
+     justify-content: center;
+     gap: 50px;
+ }
+
+ .card {
+     background-color: #e9e4e4;
+ }
+
+
+ .bat {
+     margin-top: 100px;
+     display: flex;
+     justify-content: center;
+ }
+
+ .button {
+     border: 1px solid #FF6A6A;
+     color: #F26376;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: normal;
+     padding: 15px 39px;
+     background: white;
+ }
+
+ @media (max-width: 1024px) {
+     .center_content {
+         margin-left: calc(50% - 280px);
+         margin-right: calc(50% - 280px);
+
+     }
+
+     .center_page {
+         margin-left: calc(50% - 340px);
+         margin-right: calc(50% - 340px);
+
+     }
+
+     .menu {
+         width: 300px;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+     .page {
+         width: 60vw;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+     .top {
+         width: 60vw;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+     .palka {
+         width: 40px;
+         height: 80px;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+     .items {
+         width: 30vw;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+     .itemslongs {
+         justify-content: center;
+         width: 50vh;
+         height: 350px;
+         max-width: 100%;
+         justify-content: center;
+     }
+
+
+     .product {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         width: 340px;
+
+     }
+
+     .product2 {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         width: 340px;
+     }
  }
